css/index.css
main {
  padding-top: 100px;
}

main .row {
  margin-bottom: 20px;
}

.nav-bar{
  text-align: center;
}

.box {
  
  text-align: center;
  padding-top: 30px;
  margin-top:10px;
  border: 1px solid lightgray;
}


.checked {
    color: orange;
  }

.book-title{
  background-color:gray;
  color:black;
  height:30px;
  border-radius:5px 5px 0px 0px;
}

ul{
  margin-right:40px;
}

.expanded{
  list-style-type:none;
  border:1px solid lightgray;
  height:200px;
  border-radius:5px;
  margin-bottom:20px;

}

.bookmark-visit-site{
  float:left;
  margin-left:10px;
}

li {
  list-style-type:none;
  border:1px solid lightgray;
  height:60px;
  border-radius:5px;
  margin-bottom:20px;

}

button{
  font-size:15px;
}
.bookmark-edit-collaspe{
  position: absolute;
  
  margin-top:40px;
  margin-left:10px;
  
}

.book-star-rating{
  margin-top:10px;
  margin-right:5px;
  float:right;
}

.star-rating{
  float:right ;
  
}

.black {
  background-color: black;
  color: white;
}

.green {
  background-color: green;
}

.orange {
  background-color: orange;
}

.blue {
  background-color: blue;
}

